# hw-aeson

./: .gitignore  README.md  circle.yml  hw-aeson.cabal  package.yaml  project.sh  stack.yaml
.circleci/: config.yml
.github/workflows/: haskell.yml
src/HaskellWorks/Data/: Aeson.hs
src/HaskellWorks/Data/Aeson/: Compat.hs
src/HaskellWorks/Data/Aeson/Compat/: Map.hs
src/HaskellWorks/Data/Aeson/Compat/Map/: V1.hs  V2.hs
test/HaskellWorks/Data/: AesonSpec.hs
