cabal-version:      2.2

name:               hw-aeson
version:            0.1.0.1
synopsis:           Convenience functions for Aeson
description:        Convenience functions for Aeson.
category:           Data, JSON
homepage:           https://github.com/haskell-works/hw-aeson#readme
bug-reports:        https://github.com/haskell-works/hw-aeson/issues
author:             John Ky
maintainer:         newhoggy@gmail.com
copyright:          2018-2019 John Ky
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md

common base       { build-depends: base       >= 4.7    && < 5    }

common aeson      { build-depends: aeson                          }
common hedgehog   { build-depends: hedgehog                       }
common hspec      { build-depends: hspec                          }
common text       { build-depends: text                           }

common config

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-aeson

library
  import:   base, config
          , aeson
          , text
  other-modules:    Paths_hw_aeson
  autogen-modules:  Paths_hw_aeson
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    HaskellWorks.Data.Aeson

test-suite hw-aeson-test
  import:   base, config
          , aeson
          , hedgehog
          , hspec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   test
  build-depends:    hw-aeson
  default-language: Haskell2010
  autogen-modules:  Paths_hw_aeson
  other-modules:
    HaskellWorks.Data.AesonSpec
    Paths_hw_aeson
